--- a/src/index.html
+++ b/src/index.html
@@ -45,12 +45,12 @@
                 <div>
                     <input type="button" value="00" onclick="display.value += '00'">
                     <input type="button" value="0" onclick="display.value += '0'">
-                    <input type="button" value="=" class="equal operator" onclick="display.value = eval(display.value)">
+                    <input type="button" value="=" id="equals" class="equal operator" onclick="display.value = eval(display.value)">
                 </div>
             </form>
         </div>
     </div>
     
-    
+    <script src="/src/scripts.js"></script>
 </body>
 </html>
